--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 title: Prajyot Karnik
 theme: jekyll-theme-minimal
+logo: /assets/img/headshot_circle.png
+#description: text below image
+show_downloads: true
