--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ theme: jekyll-theme-minimal
 #theme: jekyll-theme-midnight
 logo: /assets/img/headshot_circle.png
 description: Hi, I’m a backend engineer with 5 years of experience. My background in CS, passion for coding daily, and occasional technical blogging equip me to tackle complex problems.
-show_downloads: true
+show_downloads: false
 github:
   zip_url: https://www.linkedin.com/in/prajyot-karnik/
   linkedIn: https://www.linkedin.com/in/prajyot-karnik/
